--- a/Team537.ToteScore.Win/MainWindow.xaml
+++ b/Team537.ToteScore.Win/MainWindow.xaml
@@ -3,53 +3,67 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        Title="MainWindow" Height="350" Width="525"
+        Title="Live Tote Scoring" Height="350" Width="525"
         mc:Ignorable="d"
         d:DataContext="{d:DesignData Source=/SampleData/MainWindowSampleData.xaml}">
+    <Window.Resources>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         
-        <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <Button>Reset</Button>
-            <Button x:Name="AddStackButton" Click="AddStackButton_Click">Add Stack</Button>
-            <TextBlock Text="{Binding TotalScore}" Width="50" />
-        </StackPanel>
-        
-        <Grid Grid.Row="1">
-            <ListBox ItemsSource="{Binding Stacks}" HorizontalContentAlignment="Stretch">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Height="25">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-
-                            <Button Grid.Column="0" Command="{Binding SetHeightCommand}" CommandParameter="0">X</Button>
-                            <Button Grid.Column="1" Command="{Binding SetHeightCommand}" CommandParameter="1">1</Button>
-                            <Button Grid.Column="2" Command="{Binding SetHeightCommand}" CommandParameter="2">2</Button>
-                            <Button Grid.Column="3" Command="{Binding SetHeightCommand}" CommandParameter="3">3</Button>
-                            <Button Grid.Column="4" Command="{Binding SetHeightCommand}" CommandParameter="4">4</Button>
-                            <Button Grid.Column="5" Command="{Binding SetHeightCommand}" CommandParameter="5">5</Button>
-                            <Button Grid.Column="6" Command="{Binding SetHeightCommand}" CommandParameter="6">6</Button>
-                            <ToggleButton Grid.Column="7" IsChecked="{Binding Can}">Can</ToggleButton>
-                            <ToggleButton Grid.Column="8" IsChecked="{Binding Litter}">Litter</ToggleButton>
-
-                        </Grid>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0">Reset</Button>
+            <TextBlock Grid.Column="2" Text="{Binding TotalScore}" TextAlignment="Center" />
         </Grid>
+
+        <ListBox Grid.Row="1" ItemsSource="{Binding Stacks}" HorizontalContentAlignment="Stretch">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid Height="25">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+
+                        <ToggleButton Grid.Column="0" IsChecked="{Binding Height0}">X</ToggleButton>
+                        <ToggleButton Grid.Column="1" IsChecked="{Binding Height1}">1</ToggleButton>
+                        <ToggleButton Grid.Column="2" IsChecked="{Binding Height2}">2</ToggleButton>
+                        <ToggleButton Grid.Column="3" IsChecked="{Binding Height3}">3</ToggleButton>
+                        <ToggleButton Grid.Column="4" IsChecked="{Binding Height4}">4</ToggleButton>
+                        <ToggleButton Grid.Column="5" IsChecked="{Binding Height5}">5</ToggleButton>
+                        <ToggleButton Grid.Column="6" IsChecked="{Binding Height6}">6</ToggleButton>
+                        <ToggleButton Grid.Column="7" IsChecked="{Binding Can}">Can</ToggleButton>
+                        <ToggleButton Grid.Column="8" IsChecked="{Binding Litter}">Litter</ToggleButton>
+
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        
+        <Button Grid.Row="2" x:Name="AddStackButton" Width="100" Click="AddStackButton_Click">Add Stack</Button>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="3">
+            <TextBlock VerticalAlignment="Center">Coopertition</TextBlock>
+            <ToggleButton Width="100" Margin="5" IsChecked="{Binding CoopertitionSet}">Set</ToggleButton>
+            <ToggleButton Width="100" Margin="5" IsChecked="{Binding CoopertitionStack}">Stack</ToggleButton>
+        </StackPanel>
         
     </Grid>
 </Window>
