--- a/Team537.ToteScore.Win/MainWindow.xaml
+++ b/Team537.ToteScore.Win/MainWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        Title="Live Tote Scoring" Height="350" Width="525"
+        xmlns:w="clr-namespace:Team537.ToteScore.Win"
+        Title="Live Tote Scoring" Height="600" Width="800"
         mc:Ignorable="d"
         d:DataContext="{d:DesignData Source=/SampleData/MainWindowSampleData.xaml}">
     <Window.Resources>
@@ -11,109 +12,25 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
         
-        <StackPanel Orientation="Horizontal" Grid.Row="0">
+        <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.ColumnSpan="2">
             <TextBlock Margin="5">Address: </TextBlock>
             <TextBox Text="{Binding ConnectionAddress}" Width="150" IsReadOnly="{Binding CanDisconnect}" />
             <Button x:Name="ConnectButton" Margin="5" IsEnabled="{Binding CanConnect}" Click="Connect_Click">Connect</Button>
             <Button x:Name="DisconnectButton" Margin="5" IsEnabled="{Binding CanDisconnect}" Click="Disconnect_Click">Disconnect</Button>
+
+            <Button Margin="5" x:Name="ResetButton" Click="ResetButton_Click">Reset Scores</Button>
+
         </StackPanel>
         
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="2*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="2*"/>
-            </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" x:Name="ResetButton" Click="ResetButton_Click">Reset</Button>
-            <ToggleButton Grid.Column="1" x:Name="RedButton" IsChecked="{Binding IsRed}" IsEnabled="{Binding CanChangeTeam}">Red</ToggleButton>
-            <TextBlock Grid.Column="2" TextAlignment="Center">
-                <Run>Alliance: </Run>
-                <Run Text="{Binding CurrentAlliance, Mode=OneWay}" />
-            </TextBlock>
-            <ToggleButton Grid.Column="3" x:Name="BlueButton" IsChecked="{Binding IsBlue}" IsEnabled="{Binding CanChangeTeam}">Blue</ToggleButton>
-            <TextBlock Grid.Column="4" TextAlignment="Center">
-                <Run>Score: </Run>
-                <Run Text="{Binding TotalScore, Mode=OneWay}" />
-            </TextBlock>
-        </Grid>
+        <w:AllianceControl Grid.Row="1" Grid.Column="0" DataContext="{Binding Red}" />
 
-        <StackPanel Orientation="Horizontal" Grid.Row="2">
-            <TextBlock VerticalAlignment="Center">Autonomous</TextBlock>
-            <ToggleButton Width="100" Margin="5" IsChecked="{Binding RobotSet}">Robot Set</ToggleButton>
-            <ToggleButton Width="100" Margin="5" IsChecked="{Binding ToteSet}">Tote Set</ToggleButton>
-            <ToggleButton Width="100" Margin="5" IsChecked="{Binding StackedToteSet}">Stacked Tote Set</ToggleButton>
-            <ToggleButton Width="100" Margin="5" IsChecked="{Binding ContainerSet}">Container Set</ToggleButton>
-        </StackPanel>
-        
-        <TextBlock Text="Stacks:" Grid.Row="3" />
-        
-        <ListBox Grid.Row="4" ItemsSource="{Binding Stacks}" HorizontalContentAlignment="Stretch">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Grid Height="25">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-
-                        <ToggleButton Grid.Column="0" IsChecked="{Binding Height0}">X</ToggleButton>
-                        <ToggleButton Grid.Column="1" IsChecked="{Binding Height1}">1</ToggleButton>
-                        <ToggleButton Grid.Column="2" IsChecked="{Binding Height2}">2</ToggleButton>
-                        <ToggleButton Grid.Column="3" IsChecked="{Binding Height3}">3</ToggleButton>
-                        <ToggleButton Grid.Column="4" IsChecked="{Binding Height4}">4</ToggleButton>
-                        <ToggleButton Grid.Column="5" IsChecked="{Binding Height5}">5</ToggleButton>
-                        <ToggleButton Grid.Column="6" IsChecked="{Binding Height6}">6</ToggleButton>
-                        <ToggleButton Grid.Column="7" IsChecked="{Binding Can}">Can</ToggleButton>
-                        <ToggleButton Grid.Column="8" IsChecked="{Binding Litter}">Litter</ToggleButton>
-
-                    </Grid>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        
-        <Button Grid.Row="5" x:Name="AddStackButton" Width="100" Click="AddStackButton_Click">Add Stack</Button>
-
-        <Grid Grid.Row="6">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" VerticalAlignment="Center">Unprocessed Litter</TextBlock>
-            <TextBox Grid.Column="1" Width="100" Margin="5" Text="{Binding UnprocessedLitter}"></TextBox>
-            
-            <TextBlock Grid.Column="2" VerticalAlignment="Center">Landfill Litter</TextBlock>
-            <TextBox Grid.Column="3" Width="100" Margin="5" Text="{Binding ScoredLitter}"></TextBox>
-            
-            <Button Grid.Column="4" Margin="5">Blah</Button>
-        </Grid>
-        
-        <StackPanel Orientation="Horizontal" Grid.Row="7">
-            <TextBlock VerticalAlignment="Center">Coopertition</TextBlock>
-            <ToggleButton Width="100" Margin="5" IsChecked="{Binding CoopertitionSet}">Set</ToggleButton>
-            <ToggleButton Width="100" Margin="5" IsChecked="{Binding CoopertitionStack}">Stack</ToggleButton>
-        </StackPanel>
-
-
+        <w:AllianceControl Grid.Row="1" Grid.Column="1" DataContext="{Binding Blue}" />
     </Grid>
 </Window>
